<resources>
    <string name="app_name">Qip</string>
    <!--String for MainActivity Toolbar-->
    <string name="new_zip">New zip</string>
    <string name="search">Search</string>
    <string name="new_folder">New folder</string>
    <string name="sorting">Sorting</string>
    <string name="setting">Setting</string>
    <!--String for secondary menu of item sorting in MainActivity Toolbar-->
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <!--String for MainActivity Edit Toolbar-->
    <string name="done">Done</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="compress">Compress</string>
    <string name="extract">Extract</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="rename">Rename</string>
    <string name="details">Details</string>
    <!--String for SettingActivity-->
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="chinese" translatable="false">简体中文</string>
    <string name="english" translatable="false">English</string>
    <string name="default_lang">Default</string>
    <string name="size">Size</string>
    <!--String for AboutActivity-->
    <string name="version">Version: 1.0.0 Beta</string>
    <string name="description">A quick and simple Zip tool</string>
    <string name="myinfo" translatable="false">Seraphcex GitHub:github.com/Seraphcex</string>
    <string name="thanks">Special thanks to XunselF for all his help during my work,you can also check out his GitHub:github.com/XunselF</string>
    <string name="rights">All Rights Reserved</string>

</resources>
