<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/done_item"
        android:title="@string/done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/select_all_item"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete_item"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/compress_item"
        android:title="@string/compress"
        />

    <item
        android:id="@+id/extract_item"
        android:title="@string/extract"/>

    <item
        android:id="@+id/copy_item"
        android:title="@string/copy"/>

    <item
        android:id="@+id/cut_item"
        android:title="@string/cut"/>

    <item
        android:id="@+id/paste_item"
        android:title="@string/paste"/>

    <item
        android:id="@+id/rename_item"
        android:title="@string/rename"/>

    <item
        android:id="@+id/details_item"
        android:title="@string/details"/>
</menu>